--- a/index.html
+++ b/index.html
@@ -137,9 +137,7 @@
         <!-- Education -->
         <div class="education">
           <h3 class="title">Education</h3>
-          <h4 class="university">
-            East Ukrainian National University named after V. Dahl
-          </h4>
+          <h4 class="university">East Ukrainian National University V. Dahl</h4>
           <h4 class="faculty">mechanical engineer</h4>
           <p class="period">
             September 2004 - July 2009
