--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     <title>Resume</title>
   </head>
   <body>
+    <header class="head">
+      <p class="head_title">Resume list</p>
+      <ul>
+        <li class="header_list">
+          <a class="header_text" href="#projects">projects</a>
+        </li>
+        <li class="header_list">
+          <a class="header_text" href="#work">work</a>
+        </li>
+        <li class="header_list">
+          <a class="header_text" href="#education">education</a>
+        </li>
+        <li class="header_list">
+          <a class="header_text" href="#contacts">contacts</a>
+        </li>
+      </ul>
+    </header>
     <!--Main-->
     <div class="main">
       <!--Main Content-->
@@ -33,7 +50,7 @@
           </p>
         </div>
         <!--Projects-->
-        <div class="projects">
+        <div id="projects" class="projects">
           <h3 class="title">Projects</h3>
           <ol class="projects_list">
             <li class="project_item">
@@ -66,7 +83,7 @@
           </ol>
         </div>
         <!--Work-->
-        <div class="work">
+        <div id="work" class="work">
           <h3 class="title">Work Experience</h3>
 
           <!--Company 1-->
@@ -135,7 +152,7 @@
         </div>
 
         <!-- Education -->
-        <div class="education">
+        <div id="education" class="education">
           <h3 class="title">Education</h3>
           <h4 class="university">East Ukrainian National University V. Dahl</h4>
           <h4 class="faculty">mechanical engineer</h4>
@@ -156,7 +173,7 @@
         />
 
         <!--Contacts-->
-        <div class="contacts">
+        <div id="contacts" class="contacts">
           <h3 class="sidebar_title">Contacts</h3>
           <div>
             <p>
