fix mobile header.

--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
   </head>
   <body>
     <header class="head">
-      <p class="head_title">Resume list</p>
-      <ul>
-        <li class="header_list">
-          <a class="header_text" href="#projects">projects</a>
-        </li>
-        <li class="header_list">
-          <a class="header_text" href="#work">work</a>
-        </li>
-        <li class="header_list">
-          <a class="header_text" href="#education">education</a>
-        </li>
-        <li class="header_list">
-          <a class="header_text" href="#contacts">contacts</a>
-        </li>
-      </ul>
+      <div class="header">
+        <p class="head_title">Resume list</p>
+        <ul>
+          <li class="header_list">
+            <a class="header_text" href="#projects">projects</a>
+          </li>
+          <li class="header_list">
+            <a class="header_text" href="#work">work</a>
+          </li>
+          <li class="header_list">
+            <a class="header_text" href="#education">education</a>
+          </li>
+          <li class="header_list">
+            <a class="header_text" href="#contacts">contacts</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <!--Main-->
     <div class="main">
