--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="head">
       <div class="header">
-        <p class="head_title">Resume list</p>
+        <h4 class="head_title">Resume list</h4>
         <ul>
           <li class="header_list">
             <a class="header_text" href="#projects">projects</a>
@@ -239,5 +239,25 @@
         </div>
       </aside>
     </div>
+    <footer class="head">
+      <div class="header">
+        <h4 class="head_title">Follow me</h4>
+        <ul>
+          <li class="header_list">
+            <a class="header_text" href="https://t.me/Beligrous">Telegram</a>
+          </li>
+          <li class="header_list">
+            <a class="header_text" href="https://www.facebook.com/beligrous"
+              >FaceBook</a
+            >
+          </li>
+          <li class="header_list">
+            <a class="header_text" href="https://www.instagram.com/beligrous/"
+              >Instagram</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
