--- a/index.html
+++ b/index.html
@@ -201,7 +201,14 @@
               <a href="tel:+380501384441" class="contact_link"
                 >+38 050 138 44 41</a
               >
+              <p><span class="contact_type">mes: </span>
+                <a class="contact_link" href="https://t.me/Beligrous">Telegram</a></p>
             </p>
+            <p><span class="contact_type">soc: </span><a
+              class="contact_link"
+              href="https://www.linkedin.com/in/ihor-belous-0ab504243/"
+              >LinkedIn</a
+            ></p>
             <p>
               <span class="contact_type">mail:</span>
               <a href="mailto:beligrous@gmail.com" class="contact_link"
@@ -278,26 +285,26 @@
     <footer class="head">
       <div class="header">
         <h4 class="head_title">Follow me</h4>
-        <ul>
-          <li class="header_list">
+        <ul class="header_list">
+          <li class="header_item">
             <a class="header_text" href="https://t.me/Beligrous">Telegram</a>
           </li>
-          <li class="header_list">
+          <li class="header_item">
             <a class="header_text" href="https://www.facebook.com/beligrous"
               >FaceBook</a
             >
           </li>
-          <li class="header_list">
+          <li class="header_item">
             <a class="header_text" href="https://www.instagram.com/beligrous/"
               >Instagram</a
             >
           </li>
-          <li class="header_list">
+          <li class="header_item">
             <a class="header_text" href="https://github.com/beligrous"
               >GITHub</a
             >
           </li>
-          <li class="header_list">
+          <li class="header_item">
             <a
               class="header_text"
               href="https://www.linkedin.com/in/ihor-belous-0ab504243/"
