fix project experience

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             </li>
             <li class="project_item">
               <span class="project">
-                <a href="https://cryptohub.goit.global/" class="project_link"
-                  >https://cryptohub.goit.global/</a
+                <a href="https://annabramarova.github.io/filmoteka-by-10x/" class="project_link"
+                  >Filmoteka</a
                 >
                 ................<span class="project_bracket">[</span>
-                JavaScript <span class="project_bracket">]</span>
+                TeamWork on JavaScript <span class="project_bracket">]</span>
               </span>
             </li>
             <li class="project_item">
@@ -108,7 +108,7 @@
               </li>
               <li class="work_list_item">Supporting of projects</li>
               <li class="work_list_item">
-                Learning Js frameworks to optimize work and expanding the scope
+                Learning JS frameworks to optimize work and expanding the scope
                 of activities
               </li>
             </ul>
@@ -240,9 +240,9 @@
             <li class="skills_item">
               <span class="skills_text">REST API</span>
             </li>
-            <!-- <li class="tech_skills_item">
+            <li class="tech_skills_item">
               <span class="tech_skills_text">React.js</span>
-            </li> -->
+            </li>
             <!-- <li class="tech_skills_item">
               <span class="tech_skills_text">Node.js</span>
             </li> -->
