--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   class="project_link"
                   >WebStudio</a
                 >
-                ............. <span class="project_bracket">[</span> HTML5, CSS3
+                ...................... <span class="project_bracket">[</span> HTML5, CSS3
                 <span class="project_bracket">]</span>
               </span>
             </li>
@@ -71,7 +71,7 @@
                 <a href="https://annabramarova.github.io/filmoteka-by-10x/" class="project_link"
                   >Filmoteka</a
                 >
-                ................<span class="project_bracket">[</span>
+                .......................<span class="project_bracket">[</span>
                 TeamWork on JavaScript <span class="project_bracket">]</span>
               </span>
             </li>
